--- a/css/student_access.css
+++ b/css/student_access.css
@@ -173,14 +173,16 @@
 
 /* Left Tab! */
 .left-tab{
-    height: 100%;
     padding: 0;
+    top: 0;
+    bottom: 0;
+    overflow-y: auto;
     max-width: 300px;
     position: fixed;
     margin-top: 60px;
     background-color: #659dbd;
     color: var(--white-color);
-
+    z-index: 999;
 }
 .upper-left-tab{
     position: relative;
